--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,9 @@ header {
 
 
 .button-header {
-    flex-basis: 47px;
-    height: 25px;
-    border-radius: 15px;
+    flex-basis: 50px;
+    height: 26px;
+    border-radius: 12px;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -52,4 +52,35 @@ header {
     font-weight: 400;
     color: black;
     text-decoration: none;  
+}
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../img/jumbo.png");
+    background-size: cover;   
+}
+
+.welcome-block {
+    
+    padding:100px 200px 100px 200px;
+
+}
+
+
+.title {
+    margin-bottom: 20px;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+}
+
+.welcome-paragraph {
+    max-width: 620px;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
 }
