--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ html {
     font-family: 'Red Hat Text', sans-serif;
 }
 
+/* body {
+    height: 100%;
+} */
+
+:visited {
+    color: auto;
+}
+
 
 header {
     display: flex;
@@ -34,9 +42,9 @@ header {
 
 
 .button-header {
-    flex-basis: 50px;
-    height: 26px;
-    border-radius: 12px;
+    flex-basis: 55px;
+    height: 30px;
+    border-radius: 15px;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -45,12 +53,10 @@ header {
 
 
 .button-header-text {
-    /* text-align: center;
-    vertical-align: middle;
-    line-height: ; */
-    font-size: 0.6em;
+
+    font-size: 0.7em;
     font-weight: 400;
-    color: black;
+    color: #23272a;
     text-decoration: none;  
 }
 
@@ -59,28 +65,73 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 450px;
     background-image: url("../img/jumbo.png");
-    background-size: cover;   
-}
-
-.welcome-block {
+    background-size: cover;
+    background-position-y: -20px;
     
-    padding:100px 200px 100px 200px;
-
 }
 
 
-.title {
+
+.title1 {
     margin-bottom: 20px;
     color: white;
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
 }
 
 .welcome-paragraph {
-    max-width: 620px;
+    max-width: 45%;
+    margin-bottom: 8px;
     color: white;
     font-size: 15px;
     font-weight: 500;
     text-align: center;
+    line-height: 25px;  
 }
+
+.button-welcome-block {
+    display: flex;
+    justify-content: center;
+
+}
+
+.button-welcome {
+    height: 37px;
+    border-radius: 20px;
+}
+
+#white {
+    margin-right: 15px;
+    background-color: white;
+}
+
+#black {
+    background-color: #23272a;
+}
+
+.button-welcome-text {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 37px;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+#white .button-welcome-text {
+    color: #23272a;
+}
+
+#black .button-welcome-text {
+    color: white;
+}
+
+.fa-long-arrow-down {
+    margin-right: 5px;
+}
+
+
+
