--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,25 @@ header {
     line-height: 160%;
 }
 
+.section-text.first {
+    margin-top: 20px;
+}
+
+.section.second, .last-section {
+    background-color: #f5f5f5;
+}
+
+.wave {
+    fill: #f5f5f5;
+    margin-bottom: 0;
+}
+
+.wave.rotate {
+    transform: rotate(180deg);
+    
+}
+
+
 .last-section {
     display: flex;
     flex-direction: column;
@@ -187,11 +206,12 @@ header {
 
 .cta-container {
     background-image: url("../img/stars.svg");
-    background-size: cover;
-    background-origin: border-box;
+    background-size: 100%;
+    background-position-x: 0;
+    background-position-y: -6px;
     height: 20px;
     padding: 20px;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
 }
 
 .cta {
